site sturcutre up

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,8 +1,8 @@
-<main class="pa4 black-80">
+  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Contact</h2>
+
+  <main class="black-80">
   <form class="measure center">
     <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
-      <legend class="f4 fw6 ph0 mh0">Contact</legend>
-
       <div class="mt3">
         <label class="db fw6 lh-copy f6" for="email-address">Name</label>
         <input class="b pa2 input-reset ba bg-transparent w-100" type="text" name="email-address"  id="email-address" required>
