--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -3,9 +3,9 @@
 
 <!-- themes? filter by-->
 <section class="tc pb3 b">
-<a class="f4 link fw6 hover-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Philosophy</a> /
-<a class="f4 link fw6 hover-light-blue no-underline black dib ph2 pv1" href="http://prnt.cc">History and World Civilization</a> /
-<a class="f4 link fw6 hover-green no-underline black dib ph2 pv1" href="http://mrmrs.io">Music</a>
+<a class="f4 link fw6 hover-blue no-underline black dib ph2 pv1" href="#">Upcoming</a> /
+<a class="f4 link fw6 hover-green no-underline black dib ph2 pv1" href="#">Past</a>
+<!-- default to upcoming -> border, then allow past to be clickable -->
 </section>
   <!-- end themes -->
 
