--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,18 +6,18 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Philomobile</title>
 	<link rel="stylesheet" href="stylesheets/tachyons.min.css">
-	<link rel="stylesheet" href="stylesheets/styles.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 </head>
 	<body>
-	<header class="pv2 mb5 avenir">
+	<header class="pv2 mb4 avenir">
 		<nav class="cf tc mw8 center mt4 ">
 			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/">Home</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-green dib pa3 ph4-l" href="/trips">Trips</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue dib pa3 ph4-l" href="/schedule">Schedule</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-pink dib pa3 ph4-l" href="/apply">Apply</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-yellow dib pa3 ph4-l" href="/teachers">Teachers</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-yellow dib pa3 ph4-l" href="/contact">Contact</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-yellow dib pa3 ph4-l" href="/subscribe">Subscribe</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/contact">Contact</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-green dib pa3 ph4-l" href="/subscribe">Subscribe</a>
 		</nav>
 	</header>
     {{{body}}}
