--- a/views/subscribe.hbs
+++ b/views/subscribe.hbs
@@ -1,13 +1,12 @@
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Subscribe</h2>
 
-  <div class="avenir pa4-l">
-  <form class="bg-light-green mw7 center pa4 br2-ns ba b--black-10">
+  <div class="pa4-l">
+  <form class="bg-lightest-blue mw7 center pa4 br2-ns ba b--black-10">
     <fieldset class="cf bn ma0 pa0">
-      <legend class="pa0 f5 f4-ns mb3 black-80">Sign up for our newsletter!</legend>
       <div class="cf">
         <label class="clip" for="email-address">Email Address</label>
-        <input class="avenir f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns" placeholder="person@email.com" type="text" name="email-address" value="" id="email-address">
-        <input class="avenir f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns" type="submit" value="Subscribe">
+        <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns" placeholder="person@email.com" type="text" name="email-address" value="" id="email-address">
+        <input class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns" type="submit" value="Subscribe">
       </div>
     </fieldset>
   </form>
