--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,14 +23,55 @@
 
  -->
 
- <article class="homepage athelas">
-  <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(http://mrmrs.io/photos/u/009.jpg) no-repeat center;">
-    <div class="dtc v-mid">
-      <h1 class="f1 f-headline-l fw1 i white-60">Philomobile</h1>
-      <blockquote class="ph0 mh0 measure f4 lh-copy center">
-        <p class="fw1 white-70">A project designed for those who would like to explore and study philosophy in situ.
-        </p>
-      </blockquote>
-    </div>
+<article>
+  <header class="bg-gold sans-serif pt3 pb7" style="background:url(https://images.unsplash.com/photo-1420824471541-fe7e0ae0baa4?dpr=2&auto=format&fit=crop&w=767&h=575&q=80&cs=tinysrgb&crop=&bg=) no-repeat center right;background-size: cover;" >
+     <div class="mw9 center pa4 pt5-ns ph7-l">
+      <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+        <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+        <!-- the latest event + hi-def background photo -->
+          The Origins of Greek Philosophy
+        </span>
+      </h3>
+      </div>
+      </header>
+
+<article class="cf ph3 ph5-ns pv5">
+  <header class="fn fl-ns w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Welcome
+    </h1>
+    <h2 class="f3 mid-gray lh-title">
+      A message from the founder
+    </h2>
+    <time class="f6 ttu tracked gray">Yunus Tuncel, Ph.d.</time>
+  </header>
+  <div class="fn fl-ns w-50-ns">
+    <p class="f5 lh-copy measure mt0-ns">
+Studying philosophy and traveling have been my passions for a long time. After I finished my doctoral studies at the New School for Social Research, I brought these two passions together and over the years created a venue through which participants in a travel philosophy class can study and explore the life and the works of a philosopher or a school of philosophy in situ. While studying the works of philosophers, we often forget the context in and through which they were created. This context has to do with the places where they lived, the historical conditions of their times, and the people of these times, and I believe it is important to study them as much as it is to study their biographies from books. After consulting with several philosophy teachers who were all encouraging, I embarked on this project with a first Philomobile trip to the Nietzsche sites in May 2010 (more information about this trip is in the newsletter). 
+    </p>
+    <p class="f5 lh-copy measure">
+Please join us in these adventures. 
+    </p>
   </div>
+</article>
+
+<article class="cf ph3 ph5-ns pv5">
+  <header class="fn fl-ns w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+      Our Mission
+    </h1>
+<!--     <h2 class="f3 mid-gray lh-title">
+      An excerpt from the Form of the Book by Jan Tschichold
+    </h2>
+    <time class="f6 ttu tracked gray">Sometime before 1967</time> -->
+  </header>
+  <div class="fn fl-ns w-50-ns">
+    <p class="f5 lh-copy measure mt0-ns">
+ Philomobile is a project designed for those who would like to explore and study philosophy in situ. We set two goals for such a philosophical endeavor: to recreate the conditions of the past on site within the context of our own times and to explore the other aspects of the epoch and the spirit of the times, in which philosophers lived. Some of these aspects are art, literature, architecture, science and religion.
+    </p>
+    <p class="f5 lh-copy measure">
+Philomobile projects are designed both for those who are interested in the adventure of studying philosophy on the road. All Philomobile projects have a class component led by a professor and a sightseeing component led by a tour guide, both of which are integrated. For specific classes, please see our schedule.
+    </p>
+  </div>
+</article>
 </article>
