--- a/views/subscribe.hbs
+++ b/views/subscribe.hbs
@@ -1,7 +1,7 @@
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Subscribe</h2>
 
   <div class="pa4-l">
-  <form class="bg-lightest-blue mw7 center pa4 br2-ns ba b--black-10">
+  <form class="bg-gradient mw7 center pa4 br2-ns ba b--black-10">
     <fieldset class="cf bn ma0 pa0">
       <div class="cf">
         <label class="clip" for="email-address">Email Address</label>
