indiv trips css

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Philomobile</title>
-	<link rel="stylesheet" href="stylesheets/tachyons.min.css">
-	<link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="stylesheet" href="/stylesheets/tachyons.min.css">
+	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 	<body class="bg-off-white">
 	<header class="pv2 mb4 avenir f6 tracked">
