--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -10,7 +10,7 @@
   <!-- end themes -->
 
   <article class="bt bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+    <a class="db pv4 ph3 ph0-l no-underline black dim" href="/trips/123">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <img src="http://mrmrs.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
