added scedule page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -31,6 +31,14 @@
         <!-- the latest event + hi-def background photo -->
           The Origins of Greek Philosophy
         </span>
+        <div>
+            <a class="dib white f4 link bg-dark-blue b no-underline black ph2 pv1" href="http://mrmrs.io/gifolio">7 Days</a>
+            <a class="dib white f4 link b bg-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Germany, France</a>
+            <a class="dib white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by Yunus Tuncel, Ph.d</a>        
+        </div>
+
+
+  </div>
       </h3>
       </div>
       </header>
@@ -43,7 +51,7 @@
     <h2 class="f3 mid-gray lh-title">
       A message from the founder
     </h2>
-    <time class="f6 ttu tracked gray">Yunus Tuncel, Ph.d.</time>
+    <div class="f6 ttu tracked gray">Yunus Tuncel, Ph.d.</div>
   </header>
   <div class="fn fl-ns w-50-ns">
     <p class="f5 lh-copy measure mt0-ns">
