--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -1,5 +1,11 @@
 <section class="mw7 center">
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">The Origins of Greek Philosophy</h2>
+  <div class="tc">	
+  	<a class="white f4 link bg-dark-blue b no-underline black dib ph2 pv1" href="http://mrmrs.io/gifolio">7 Days</a>
+    <a class="white f4 link b bg-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Germany, France</a>
+    <a class="white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by Yunus Tuncel, Ph.d</a>
+  </div>
+   
 	<article class="baskerville pb2">
 	  <div class="ph3 ph4-m ph5-l">
 	    <div class="measure db center f5 f4-ns lh-copy">
