--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,13 +11,13 @@
 	<body class="bg-off-white">
 	<header class="pv2 mb4 avenir f6 tracked">
 		<nav class="cf tc mw8 center mt4 ">
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/">Home</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/trips">Trips</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/schedule">Schedule</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/apply">Apply</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/teachers">Teachers</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/contact">Contact</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-blue hover-white dib pa3 ph4-l" href="/subscribe">Subscribe</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/">Home</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/trips">Trips</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/schedule">Schedule</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/apply">Apply</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/teachers">Teachers</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/contact">Contact</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/subscribe">Subscribe</a>
 		</nav>
 	</header>
     {{{body}}}
