--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -14,7 +14,7 @@
       <tbody class="lh-copy">
         <tr>
           <td class="pv3 pr3 bb b--black-20">May 1st 2017 - May 5th 2017</td>
-          <td class="pv3 pr3 bb b--black-20">The Origins of Greek Philosophy</td>
+          <td class="pv3 pr3 bb b--black-20"><a class="link black" href="http://mrmrs.io/writing">The Origins of Greek Philosophy</a></td>
           <td class="pv3 pr3 bb b--black-20">Greece</td>
           <td class="pv3 pr3 bb b--black-20">USD 1,000</td>
           <td class="pv3 pr3 bb b--black-20">April 2nd 2017</td>
