--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,47 +1,16 @@
-<!--   <article class="mw7 center ph3 ph5-ns tc br2 pv5 bg-washed-green dark-green mb5">
-  <h1 class="fw6 f3 f2-ns lh-title mt0 mb3">
-    This is a tagline. For x.
-  </h1>
-  <h2 class="fw2 f4 lh-copy mt0 mb3">
-    This will change things. And we want you to be involved. This text needs to
-    be longer for testing sake.
-  </h2>
-  <p class="fw1 f5 mt0 mb3">
-    Sign up for beta access or learn more about x.
-  </p>
-  <div>
-    <a class="f6 br-pill bg-dark-green no-underline washed-green ba b--dark-green grow pv2 ph3 dib mr3"
-      href="#">
-      Sign Up
-    </a>
-    <a class="f6 br-pill dark-green no-underline ba grow pv2 ph3 dib"
-      href="#">
-      Learn More
-    </a>
-  </div>
-</article>
-
- -->
-
 <article>
-  <header class="bg-gold sans-serif pt3 pb7" style="background:url(https://images.unsplash.com/photo-1420824471541-fe7e0ae0baa4?dpr=2&auto=format&fit=crop&w=767&h=575&q=80&cs=tinysrgb&crop=&bg=) no-repeat center right;background-size: cover;" >
+<header class="bg-gold sans-serif pt3 pb7" style="background:url(https://images.unsplash.com/photo-1487581424120-18f3611a63e6?dpr=2&auto=format&fit=crop&w=767&h=528&q=80&cs=tinysrgb&crop=&bg=) no-repeat center right;background-size: cover;" >
      <div class="mw9 center pa4 pt5-ns ph7-l">
       <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
         <span class="bg-black-90 lh-copy white pa1 tracked-tight">
         <!-- the latest event + hi-def background photo -->
-          The Origins of Greek Philosophy
+          Philomobile
         </span>
-        <div>
-            <a class="dib white f4 link bg-dark-blue b no-underline black ph2 pv1" href="http://mrmrs.io/gifolio">7 Days</a>
-            <a class="dib white f4 link b bg-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Germany, France</a>
-            <a class="dib white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by Yunus Tuncel, Ph.d</a>        
-        </div>
-
-
   </div>
       </h3>
       </div>
-      </header>
+</header>
+
 
 <article class="cf ph3 ph5-ns pv5">
   <header class="fn fl-ns w-50-ns pr4-ns">
@@ -82,4 +51,25 @@ Philomobile projects are designed both for those who are interested in the adven
     </p>
   </div>
 </article>
+
+<!-- <header class="bg-gold sans-serif pt3 pb7" style="background:url(https://images.unsplash.com/photo-1420824471541-fe7e0ae0baa4?dpr=2&auto=format&fit=crop&w=767&h=575&q=80&cs=tinysrgb&crop=&bg=) no-repeat center right;background-size: cover;" >
+     <div class="mw9 center pa4 pt5-ns ph7-l">
+      <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+        <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+        
+          The Origins of Greek Philosophy
+        </span>
+        <div>
+            <a class="dib white f4 link bg-dark-blue b no-underline black ph2 pv1" href="http://mrmrs.io/gifolio">7 Days</a>
+            <a class="dib white f4 link b bg-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Germany, France</a>
+            <a class="dib white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by Yunus Tuncel, Ph.d</a>        
+        </div>
+
+
+  </div>
+      </h3>
+      </div>
+</header> 
+ -->
 </article>
+
