--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -1,4 +1,7 @@
+  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Schedule</h2>
+
 <div class="pa4">
+
   <div class="overflow-auto">
     <table class="f6 w-100 mw8 center" cellspacing="0">
       <thead>
