--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -3,90 +3,33 @@
 
 <!-- themes? filter by-->
 <section class="tc pb3 b">
-<a class="f4 link fw6 hover-blue no-underline black dib ph2 pv1" href="#">Upcoming</a> /
-<a class="f4 link fw6 hover-green no-underline black dib ph2 pv1" href="#">Past</a>
+<a class="f4 link fw6 hover-blue no-underline black dib ph2 pv1" href="/trips/?hasEnded=false">Upcoming</a> /
+<a class="f4 link fw6 hover-green no-underline black dib ph2 pv1" href="/trips/?hasEnded=true">Past</a>
 <!-- default to upcoming -> border, then allow past to be clickable -->
 </section>
   <!-- end themes -->
-
+{{#each trips as |trip|}}
+  {{#if trip.visible}}
   <article class="bt bb b--black-10">
     <a class="db pv4 ph3 ph0-l no-underline black dim" href="/trips/123">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{trip.photos}}" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 fw1 baskerville mt0 lh-title">Philosophy of Nietzsche</h1>
+          <h1 class="f3 fw1 baskerville mt0 lh-title">{{trip.tripName}}</h1>
           <p class="f6 f5-l lh-copy">
             The tech giant says it is ready to begin planning a quantum
             computer, a powerful cpu machine that relies on subatomic particles instead
             of transistors.
           </p>
           <p class="f6 lh-copy mv0">with Yunus Tuncel</p>
-          <p class="f6 lh-copy mv0">from 5th May to 7th May</p>
+          <p class="f6 lh-copy mv0">from {{trip.startDate}} to {{trip.endDate}}</p>
           <!-- add locations here: -->
         </div>
       </div>
     </a>
   </article>
-  <article class="bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.io/photos/warehouse.jpg" class="db" alt="Photo of a warehouse with stacked shelves.">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 fw1 baskerville mt0 lh-title">Warehouse Prices Are Fast on the Rise</h1>
-          <p class="f6 f5-l lh-copy">
-            A warehouse is a commercial building for storage of goods.
-            Warehouses are used by manufacturers, importers, exporters,
-            wholesalers, transport businesses, customs, etc. They are
-            usually large plain buildings in industrial areas of cities,
-            towns and villages.
-          </p>
-          <p class="f6 lh-copy mv0">By Robin Darnell</p>
-        </div>
-      </div>
-    </a>
-  </article>
-    <article class="bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.io/photos/warehouse.jpg" class="db" alt="Photo of a warehouse with stacked shelves.">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 fw1 baskerville mt0 lh-title">Warehouse Prices Are Fast on the Rise</h1>
-          <p class="f6 f5-l lh-copy">
-            A warehouse is a commercial building for storage of goods.
-            Warehouses are used by manufacturers, importers, exporters,
-            wholesalers, transport businesses, customs, etc. They are
-            usually large plain buildings in industrial areas of cities,
-            towns and villages.
-          </p>
-          <p class="f6 lh-copy mv0">By Robin Darnell</p>
-        </div>
-      </div>
-    </a>
-  </article>
-    <article class="bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.io/photos/warehouse.jpg" class="db" alt="Photo of a warehouse with stacked shelves.">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 fw1 baskerville mt0 lh-title">Warehouse Prices Are Fast on the Rise</h1>
-          <p class="f6 f5-l lh-copy">
-            A warehouse is a commercial building for storage of goods.
-            Warehouses are used by manufacturers, importers, exporters,
-            wholesalers, transport businesses, customs, etc. They are
-            usually large plain buildings in industrial areas of cities,
-            towns and villages.
-          </p>
-          <p class="f6 lh-copy mv0">By Robin Darnell</p>
-        </div>
-      </div>
-    </a>
-  </article>
+   {{/if}}
+ {{/each}} 
 </section>
