--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Philomobile</title>
+	<script src="/javascripts/script.js"></script>
 	<link rel="stylesheet" href="/stylesheets/tachyons.min.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
