--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,12 +15,13 @@
 			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/">Home</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/trips">Trips</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/schedule">Schedule</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/teachers">Teachers</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/contact">Contact</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/lecturers">Lecturers</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="/subscribe">Subscribe</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-near-white dib pa3 ph4-l" href="mailto:info@philomobile.com">Contact</a>
 			<a class="grow black f6 f5-l link bg-animate hover-bg-green hover-white  dib pa3 ph4-l ba b--dotted" href="http://philomobile.bigcartel.com/">Apply</a>
 		</nav>
 	</header>
     {{{body}}}
   </body>
 </html>
+
