--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -1,9 +1,9 @@
 <section class="mw7 center">
-  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">The Origins of Greek Philosophy</h2>
+  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">{{trip.tripName}}</h2>
   <div class="tc">	
   	<a class="white f4 link bg-dark-blue b no-underline black dib ph2 pv1" href="http://mrmrs.io/gifolio">7 Days</a>
     <a class="white f4 link b bg-blue no-underline black dib ph2 pv1" href="http://mrsjxn.com">Germany, France</a>
-    <a class="white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by Yunus Tuncel, Ph.d</a>
+    <a class="white f4 link b bg-green no-underline black dib ph2 pv1" href="http://prnt.cc">Taught by {{trip.teachers}}</a>
   </div>
    
 	<article class="baskerville pb2">
@@ -27,41 +27,20 @@
 	  </div>
 	</article>
 
+
 <article class="pb2">
+	<!-- itinerary -->
 	<h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Sample Itinerary</h2>
-	<article class="center mw5 mw6-ns hidden ba mv4">
-	  <h1 class="f4 bg-near-black white mv0 pv2 ph3">Day 1</h1>
-	  <div class="pa3 bt">
-	    <p class="f6 f5-ns lh-copy measure mv0">
-	      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-	      tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-	      vero eos et accusam et justo duo dolores et ea rebum.
-	    </p>
-	  </div>
-	</article>
-
-<article class="center mw5 mw6-ns hidden ba mv4">
-  <h1 class="f4 bg-near-black white mv0 pv2 ph3">Day 2</h1>
-  <div class="pa3 bt">
-    <p class="f6 f5-ns lh-copy measure mv0">
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-      tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-      vero eos et accusam et justo duo dolores et ea rebum.
-    </p>
-  </div>
-</article>
-
-<article class="center mw5 mw6-ns hidden ba mv4">
-  <h1 class="f4 bg-near-black white mv0 pv2 ph3">Day 3</h1>
-  <div class="pa3 bt">
-    <p class="f6 f5-ns lh-copy measure mv0">
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-      tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-      vero eos et accusam et justo duo dolores et ea rebum.
-    </p>
-  </div>
-</article>
-</article>
+	{{#each trip.itinerary as |it|}}
+		<article class="center mw5 mw6-ns hidden ba mv4">
+		  <h1 class="f4 bg-near-black white mv0 pv2 ph3">{{@key}}</h1>
+		  <div class="pa3 bt">
+		    <p class="f6 f5-ns lh-copy measure mv0">
+		    {{it}}
+		    </p>
+		  </div>
+		</article>
+	{{/each}}
 
 
 	<h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Teachers</h2>
