--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -22,14 +22,12 @@
     <a class="db pv4 ph3 ph0-l no-underline black dim" href="/trips/{{trip.slug}}">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="{{trip.photos}}" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{trip.photos}}" class="db">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h1 class="f3 fw1 baskerville mt0 lh-title">{{trip.tripName}}</h1>
           <p class="f6 f5-l lh-copy">
-            The tech giant says it is ready to begin planning a quantum
-            computer, a powerful cpu machine that relies on subatomic particles instead
-            of transistors.
+            {{trip.shortDescription}}
           </p>
           <p class="f6 lh-copy mv0">with {{trip.teachers}}</p>
           <p class="f6 lh-copy mv0">from {{trip.startDate}} to {{trip.endDate}}</p>
