--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,12 +12,12 @@
 	<body class="bg-off-white">
 	<header class="pv2 mb4 avenir f6 tracked">
 		<nav class="cf tc mw8 center mt4 ">
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/">Home</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/trips">Trips</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/schedule">Schedule</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/lecturers">Lecturers</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="/subscribe">Subscribe</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-lightest-blue dib pa3 ph4-l" href="mailto:info@philomobile.com">Contact</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/">Home</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/trips">Trips</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/schedule">Schedule</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/lecturers">Lecturers</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/subscribe">Subscribe</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="mailto:info@philomobile.com">Contact</a>
 			<a class="grow black f6 f5-l link bg-animate hover-bg-green hover-white  dib pa3 ph4-l ba b--dotted" href="http://philomobile.bigcartel.com/">Apply</a>
 		</nav>
 	</header>
