added team list

--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -24,8 +24,8 @@
           <p class="f6 f5-l lh-copy">
             {{trip.shortDescription}}
           </p>
-          <p class="f6 lh-copy mv0">with {{trip.teachers}}</p>
-          <p class="f6 lh-copy mv0">from {{trip.startDate}} to {{trip.endDate}}</p>
+  <!--         <p class="f6 lh-copy mv0">with {{trip.teachers}}</p>
+          <p class="f6 lh-copy mv0">from {{trip.startDate}} to {{trip.endDate}}</p> -->
           <!-- add locations here: -->
         </div>
       </div>
