--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,8 @@
-<article>
+h<article>
   <header class="bg-gold sans-serif pt3 pb7" style="background:url('images/background-image.jpeg') no-repeat center right;background-size: cover;" >
        <div class="mw9 center pa4 pt5-ns ph7-l">
         <h3 class="f1 f-6-m f-headline-l measure-narrow lh-title mv0">
-          <span class="bg-black-90 lh-copy white pa2 tracked-tight">
+          <span class="bg-black-90 lh-copy white pa3 tracked-tight athelas">
             Philomobile
           </span>
     </div>
@@ -44,6 +44,52 @@
       <p class="f5 lh-copy measure">
         Philomobile projects are designed both for those who are interested in the adventure of studying philosophy on the road. All Philomobile projects have a class component led by a professor and a sightseeing component led by a tour guide, both of which are integrated. For specific classes, please see our schedule.
       </p>
+    </div>
+  </article>
+
+    <article class="cf ph3 ph5-ns pv5">
+    <header class="fn fl-ns w-50-ns pr4-ns">
+      <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+        Team
+      </h1>
+    </header>
+    <div class="fn fl-ns w-50-ns">
+
+<ul class="list pl0 mt0 measure center">
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
+</ul>
+
     </div>
   </article>
 </article>
