--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -2,7 +2,7 @@
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">{{trip.tripName}}</h2>
   <div class="tc">	
   	<a class="white f4 link bg-dark-blue b no-underline black dib ph2 pv1">{{trip.startDate}} to {{trip.endDate}}</a>
-    <a class="white f4 link b bg-green no-underline black dib ph2 pv1">Taught by {{trip.teachers}}</a>
+    <a class="white f4 link b bg-purple no-underline black dib ph2 pv1">Taught by {{trip.teachers}}</a>
   </div>
    
 	<article class="baskerville pb2">
@@ -28,5 +28,9 @@
 		  </div>
 		</article>
 	{{/each}}
+
+	<div class="tc avenir pt5">
+		<a class="grow bg-green white f1 f1-l link bg-animate hover-bg-blue hover-white dib pa4 ph5-l ba b--dotted" href="http://philomobile.bigcartel.com/">Apply Now</a>
+	</div>
 </article>
 </section>
