--- a/views/home.hbs
+++ b/views/home.hbs
@@ -88,6 +88,22 @@ h<article>
         <span class="f6 db black-70">Position</span>
       </div>
   </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+      <div class="pl3 flex-auto">
+        <span class="f6 db black-70">Name</span>
+        <span class="f6 db black-70">Position</span>
+      </div>
+  </li>
 </ul>
 
     </div>
