--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-h<article>
+<article>
   <header class="bg-gold sans-serif pt3 pb7" style="background:url('images/background-image.jpeg') no-repeat center right;background-size: cover;" >
        <div class="mw9 center pa4 pt5-ns ph7-l">
         <h3 class="f1 f-6-m f-headline-l measure-narrow lh-title mv0">
