--- a/views/lecturers.hbs
+++ b/views/lecturers.hbs
@@ -1,5 +1,5 @@
 <section class="mw7 center avenir">
-  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Lecturers</h2>
+  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Instructors</h2>
 
   {{#each teachers as |t|}}
     <article class="w100 bg-white br3 pa3 pa4-ns ma3 ba b--black-10">
