--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -17,7 +17,7 @@
       <tbody class="lh-copy">
       {{#each trips as |t|}}
         <tr>
-          <td class="pv3 pr3 bb b--black-20 hover-bg-blue"><a class="link black" href="/trips/{{t.slug}}">{{t.name}}</a></td>
+          <td class="pv3 pr3 bb b--black-20"><a class="link f5 fw6 db blue no-underline underline-hover" href="/trips/{{t.slug}}">{{t.name}}</a></td>
           <td class="pv3 pr3 bb b--black-20">{{t.startDate}} to {{t.endDate}}</td>
           <td class="pv3 pr3 bb b--black-20">{{t.destinations}}</td>
           <td class="pv3 pr3 bb b--black-20">{{t.applyBy}}</td>
