--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -17,7 +17,7 @@
 
 <article class="pb2">
 	<!-- itinerary -->
-	<h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Sample Itinerary</h2>
+	<h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">General Itinerary</h2>
 	{{#each trip.itinerary as |it|}}
 		<article class="center mw5 mw6-ns hidden ba mv4">
 		  <h1 class="f4 bg-near-black white mv0 pv2 ph3">{{@key}}</h1>
