--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,11 +5,10 @@
           <span class="bg-black-90 lh-copy white pa3 tracked-tight athelas">
             Philomobile
           </span>
+      </div>
+    </h3>
     </div>
-        </h3>
-        </div>
   </header>
-
 
   <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns w-50-ns pr4-ns">
@@ -57,51 +56,51 @@
 
 <ul class="list pl0 mt0 measure center">
   <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+    class="flex lh-copy pa3 ph0-l bb b--black-10">
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <img class="w2 h2 w3-ns h3-ns br-100" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
       <div class="pl3 flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
+        <span class="f6 db black-70">Email</span>
       </div>
   </li>
 </ul>
