--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,7 +35,7 @@
 	  	</a>
 
  	
-	  <p class="f5"><span class="dib mr4 mr5-ns">©2017 Philomobile Inc.</span></p>
+	  <p class="f5"><span class="athelas dib mr4 mr5-ns">©2017 Philomobile Inc.</span></p>
 
 	</footer>
   </body>
