--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,8 +5,14 @@
           <span class="bg-black-90 lh-copy white pa3 tracked-tight athelas">
             Philomobile
           </span>
+        </h3>
+
+<!--         <blockquote class="bg-opac athelas ml0 mt0 pl4 mt4 black-90">
+          <p class="f5 f4-m f3-l lh-copy measure mt0 pt3 pb3">
+          Philosophy and trips and stuff..
+          </p>
+       </blockquote> -->
       </div>
-    </h3>
     </div>
   </header>
 
