--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -14,7 +14,7 @@
 {{#each trips as |trip|}}
   {{#if trip.visible}}
   <article class="bt bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="/trips/{{trip.slug}}">
+    <a class="db pv4 ph3 ph0-l no-underline black dim" href="/trips/{{trip.tripID}}">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <img src="{{trip.photos}}" class="db">
