--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,5 @@
-<h1>{{message}}</h1>
-<!-- <h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre> -->
+<article class="vh-100 dt w-100 bg-dark-blue">
+  <div class="dtc v-mid tc white ph3 ph4-l">
+    <h1 class="f6 f2-m f-subheadline-l fw6 tc">{{message}}</h1>
+  </div>
+</article>
