--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,3 +1,7 @@
 <section class="mw7 center avenir">
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Blog</h2>
 </section>
+
+<div class="pa4-l mw7 center pa4 br2-ns">
+	<iframe src="http://cookingwithamy.blogspot.com/" width="100%" height="1000px"></iframe>
+</div>
