--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,17 +4,31 @@
         <h3 class="f1 f-6-m f-headline-l measure-narrow lh-title mv0">
           <span class="bg-black-90 lh-copy white pa3 tracked-tight athelas">
             Philomobile
-          </span>
+          </span>  
         </h3>
 
-<!--         <blockquote class="bg-opac athelas ml0 mt0 pl4 mt4 black-90">
-          <p class="f5 f4-m f3-l lh-copy measure mt0 pt3 pb3">
-          Philosophy and trips and stuff..
-          </p>
-       </blockquote> -->
+        <h4 class="georgia i">
+        To explore great works on location.
+        </h4>
       </div>
     </div>
   </header>
+
+    <article class="cf ph3 ph5-ns pv5">
+    <div class="pa4">
+    <blockquote class="athelas ml0 mt0 pl4 black-90 bl bw2 b--blue">
+      <p class="f5 f4-m f3-l lh-copy measure mt0">
+        Discipline in typography is a prime virtue. Individuality
+        must be secured by means that are rational. Distinction
+        needs to be won by simplicity and restraint. It is equally
+        true that these qualities need to be infused wiht a
+        certain spirit and vitality, or they degenerate into
+        dullness and mediocrity.
+      </p>
+      <cite class="f6 ttu tracked fs-normal">―Stanley Morison</cite>
+    </blockquote>
+  </div>
+</article>
 
   <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns w-50-ns pr4-ns">
@@ -63,7 +77,15 @@
 <ul class="list pl0 mt0 measure center">
   <li
     class="flex lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
+      <div class="flex-auto">
+        <span class="f3 b db black-70">Yunus Tuncel</span>
+        <span class="f5 db black-70">Founder</span>
+        <span class="f6 db black-70">yunus@philomobile.com</span>
+      </div>
+  </li>
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
         <span class="f6 db black-70">Email</span>
@@ -71,7 +93,7 @@
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
+      <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
         <span class="f6 db black-70">Email</span>
@@ -79,7 +101,7 @@
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
+      <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
         <span class="f6 db black-70">Email</span>
@@ -87,23 +109,7 @@
   </li>
   <li
     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
-      </div>
-  </li>
-  <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
-      </div>
-  </li>
-  <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-      <div class="pl3 flex-auto">
+      <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
         <span class="f6 db black-70">Email</span>
