--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -1,8 +1,8 @@
 <section class="mw7 center">
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">{{trip.tripName}}</h2>
   <div class="tc">	
-  	<a class="white f4 link bg-dark-blue b no-underline black dib ph2 pv1">{{trip.startDate}} to {{trip.endDate}}</a>
-    <a class="white f4 link b bg-purple no-underline black dib ph2 pv1">Taught by {{trip.teachers}}</a>
+  	<div class="f6 ttu tracked blue pb2">Taught by <strong>{{trip.teachers}}</strong></div>
+   	<div class="f6 ttu tracked purple">from <strong>{{trip.startDate}}</strong> to <strong>{{trip.endDate}}</strong></div>
   </div>
    
 	<article class="baskerville pb2">
