--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,14 +7,14 @@
           </span>  
         </h3>
 
-        <h4 class="georgia i">
+<!--         <h4 class="georgia i">
         To explore great works on location.
-        </h4>
+        </h4> -->
       </div>
     </div>
   </header>
 
-    <article class="cf ph3 ph5-ns pv5">
+<!--     <article class="cf ph3 ph5-ns pv5">
     <div class="pa4">
     <blockquote class="athelas ml0 mt0 pl4 black-90 bl bw2 b--blue">
       <p class="f5 f4-m f3-l lh-copy measure mt0">
@@ -28,7 +28,7 @@
       <cite class="f6 ttu tracked fs-normal">―Stanley Morison</cite>
     </blockquote>
   </div>
-</article>
+</article> -->
 
   <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns w-50-ns pr4-ns">
@@ -76,7 +76,7 @@
 
 <ul class="list pl0 mt0 measure center">
   <li
-    class="flex lh-copy pa3 ph0-l bb b--black-10">
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <span class="f3 b db black-70">Yunus Tuncel</span>
         <span class="f5 db black-70">Founder</span>
@@ -84,7 +84,7 @@
       </div>
   </li>
   <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
@@ -92,7 +92,7 @@
       </div>
   </li>
   <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
@@ -100,7 +100,7 @@
       </div>
   </li>
   <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
@@ -108,7 +108,7 @@
       </div>
   </li>
   <li
-    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <span class="f6 db black-70">Name</span>
         <span class="f6 db black-70">Position</span>
