--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -10,7 +10,7 @@
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Dates</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Destination</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Deadline</th>
-          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Lecturer</th>
+          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Instructors</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white"></th>
         </tr>
       </thead>
