--- a/views/apply.hbs
+++ b/views/apply.hbs
@@ -5,5 +5,5 @@
 	<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 	<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/forms/?utm_campaign=mEyApF&amp;utm_source=typeform.com-8311573-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-onlineform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 
-	<h2 class="pt5 tc blue">Step 2: Make your payment <a class="orange link grow bg-animate hover-gold" href="philomobile.bigcartel.com.">here</a></h2>
+	<h2 class="pt5 tc blue">Step 2: Make your payment <a class="orange link grow bg-animate hover-gold" href="http://philomobile.bigcartel.com">here</a> !</h2>
 </section>
