--- a/views/home.hbs
+++ b/views/home.hbs
@@ -78,41 +78,41 @@
   <li
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <span class="f3 b db black-70">Yunus Tuncel</span>
-        <span class="f5 db black-70">Founder</span>
-        <span class="f6 db black-70">yunus@philomobile.com</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
+        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
   <li
-    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
+        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
-  <li
-    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
+    <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
+        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
-  <li
-    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
+    <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
+        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
-  <li
-    class="flex items-center lh-copy pv3 ph0-l bb b--black-10">
+    <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <span class="f6 db black-70">Name</span>
-        <span class="f6 db black-70">Position</span>
-        <span class="f6 db black-70">Email</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
+        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
 </ul>
