--- a/views/home.hbs
+++ b/views/home.hbs
@@ -79,40 +79,73 @@
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
         <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
-        <span class="f5 db black-70 georgia b">Founder</span>
+        <span class="f5 db black-70 georgia b">Founder and Director</span>
         <span class="f6 db black-70 navy">yunus@philomobile.com</span>
       </div>
   </li>
   <li
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
-        <span class="f5 db black-70 georgia b">Founder</span>
-        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Alec Ontiveros</h3>
+        <span class="f5 db black-70 georgia b">Assistant Director, Marketing Associate and Graphic Designer</span>
+        <span class="f6 db black-70 navy">alecontiveros@philomobile.com</span>
+      </div>
+  </li>
+      <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
+      <div class="flex-auto">
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Luke Trusso</h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate and Web Editor</span>
+        <span class="f6 db black-70 navy">luketrusso@philomobile.com</span>
+      </div>
+  </li>
+        <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
+      <div class="flex-auto">
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Seth Binsted</h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate, Photographer and Videographer</span>
+        <span class="f6 db black-70 navy">sethbinsted@philomobile.com</span>
       </div>
   </li>
     <li
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
-        <span class="f5 db black-70 georgia b">Founder</span>
-        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Esha Bajaj</h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate</span>
+        <span class="f6 db black-70 navy">eshabajaj@philomobile.com</span>
       </div>
   </li>
     <li
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
-        <span class="f5 db black-70 georgia b">Founder</span>
-        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Annie Barson</h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate</span>
+        <span class="f6 db black-70 navy">anniebarson@philomobile.com</span>
       </div>
   </li>
-    <li
+      <li
     class="flex lh-copy pv3 ph0-l bb b--black-10">
       <div class="flex-auto">
-        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Yunus Tuncel</h3>
-        <span class="f5 db black-70 georgia b">Founder</span>
-        <span class="f6 db black-70 navy">yunus@philomobile.com</span>
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Liv Chai</h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate</span>
+        <span class="f6 db black-70 navy">livchai@philomobile.com</span>
+      </div>
+  </li>
+      <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
+      <div class="flex-auto">
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Anjali Rajan </h3>
+        <span class="f5 db black-70 georgia b">Marketing Associate</span>
+        <span class="f6 db black-70 navy">anjalirajan@philomobile.com</span>
+      </div>
+  </li>
+
+      <li
+    class="flex lh-copy pv3 ph0-l bb b--black-10">
+      <div class="flex-auto">
+        <h3 class="mv0 pv0 f3 fw7 ttu tracked lh-title mb3 avenir">Ashley Teoh</h3>
+        <span class="f5 db black-70 georgia b">Web Designer and Developer</span>
+        <span class="f6 db black-70 navy">ashley@philomobile.com</span>
       </div>
   </li>
 </ul>
